[package]
name = "git-less"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-less"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "wrap_help"] }
regex = "1.10.4"
skim = "0.10.4"
subprocess = "0.2.9"
